--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,3 +12,10 @@ jobs:
     steps:
       - name: Hello World 찍기
         run: echo "Hellow World"
+
+      - name: 여러개 찍기
+        run:
+          echo "난 너를 몰라"
+          echo "그걸 알아둬"
+          echo "부서져도 몰라"
+          echo "그걸 알아둬"
