--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,3 +19,7 @@ jobs:
           echo "그걸 알아둬"
           echo "부서져도 몰라"
           echo "그걸 알아둬"
+      - name: 깃헙 변수
+        run:
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
